--- a/Jarviz_Covidchatbot_Aashika.ipynb
+++ b/Jarviz_Covidchatbot_Aashika.ipynb
@@ -74,8 +74,8 @@
     }
    ],
    "source": [
-    "nltk.download('punkt')   # for first-time use only\n",
-    "nltk.download('wordnet')    # for first-time use only\n",
+    "nltk.download('punkt')   \n",
+    "nltk.download('wordnet')    \n",
     "\n",
     "\n",
     "sent_tokens = nltk.sent_tokenize(paragraph)\n",
@@ -179,23 +179,23 @@
     "def response(user_response):\n",
     "    robo_response = ''\n",
     "    \n",
-    "    sent_tokens.append(user_response)   # Appending the Question user ask to sent_tokens to find the Tf-Idf and cosine_similarity between User query and the content.\n",
-    "    TfidfVec = TfidfVectorizer(tokenizer = Normalize, stop_words='english')    #tokenizer ask about Pre-processing parameter and it will consume the Normalize() function and it will also remove StopWords\n",
+    "    sent_tokens.append(user_response)   \n",
+    "    TfidfVec = TfidfVectorizer(tokenizer = Normalize, stop_words='english')    \n",
     "    tfidf = TfidfVec.fit_transform(sent_tokens)\n",
     "\n",
-    "    vals = cosine_similarity(tfidf[-1], tfidf)    # It will do cosine_similarity between last vectors and all the vectors because last vector contain the User query\n",
-    "    idx = vals.argsort()[0][-2]     # argsort() will sort the tf_idf in ascending order. [-2] means second last index i.e. index of second highest value after sorting the cosine_similarity. Index of last element is not taken as query is added at end and it will have the cosine_similarity with itself.\n",
+    "    vals = cosine_similarity(tfidf[-1], tfidf)    \n",
+    "    idx = vals.argsort()[0][-2]     \n",
     "\n",
-    "    flat = vals.flatten()   # [[0,...,0.89,1]] -> [0,...,0.89,1] this will make a single list of vals which had list inside a list.\n",
+    "    flat = vals.flatten()   \n",
     "    flat.sort()\n",
-    "    req_tfidf = flat[-2]  # this contains tfid value of second highest cosine similarity\n",
+    "    req_tfidf = flat[-2]  \n",
     "\n",
-    "    if(req_tfidf == 0):    # 0 means there is no similarity between the question and answer\n",
+    "    if(req_tfidf == 0):    \n",
     "        robo_response = robo_response + \"I am sorry! I don't understand you. Please rephrase you query.\"\n",
     "        return robo_response\n",
     "    \n",
     "    else:\n",
-    "        robo_response = robo_response + sent_tokens[idx]    # return the sentences at index -2 as answer\n",
+    "        robo_response = robo_response + sent_tokens[idx]    \n",
     "        return robo_response"
    ]
   },
@@ -213,18 +213,18 @@
     "        user_response = user_msg\n",
     "        if(user_response not in bye):\n",
     "            if(user_response == '/start'):\n",
-    "                bot_resp = \"\"\"Hi! There. I am your Corona Protector. I can tell you all the Facts and Figures, Signs and Symptoms related to spread of Covid-19 in India. \\nType Bye to Exit.\"\"\" \n",
+    "                bot_resp = \"\"\"Hi! There. I am your Corona Protector. I can tell you all the Facts and Figures, Signs and Symptoms related to spread of Covid-19 in USA. \\nType Bye to Exit.\"\"\" \n",
     "                return bot_resp\n",
     "            elif(user_response in thank_you):\n",
     "                bot_resp = random.choice(thank_response)\n",
     "                return bot_resp\n",
     "            elif(user_response in greetings):\n",
-    "                bot_resp = random.choice(greetings) + \", What information you what related to Covid-19 in India\"\n",
+    "                bot_resp = random.choice(greetings) + \", What information you what related to Covid-19 in USA\"\n",
     "                return bot_resp\n",
     "            else:\n",
     "                user_response = user_response.lower()\n",
     "                bot_resp = response(user_response)\n",
-    "                sent_tokens.remove(user_response)   # remove user question from sent_token that we added in sent_token in response() to find the Tf-Idf and cosine_similarity\n",
+    "                sent_tokens.remove(user_response)   \n",
     "                return bot_resp\n",
     "        else:\n",
     "            flag = False\n",
@@ -243,11 +243,11 @@
     "\n",
     "class telegram_bot():\n",
     "    def __init__(self):\n",
-    "        self.token = \"1662783942:AAHVah3PuCcqqyd54eOZb5QOJu-maNK6xmM\"    #write your token here!\n",
+    "        self.token = \"\"    #write your token here!\n",
     "        self.url = f\"https://api.telegram.org/bot{self.token}\"\n",
     "\n",
     "    def get_updates(self,offset=None):\n",
-    "        url = self.url+\"/getUpdates?timeout=100\"   # In 100 seconds if user input query then process that, use it as the read timeout from the server\n",
+    "        url = self.url+\"/getUpdates?timeout=100\"  \n",
     "        if offset:\n",
     "            url = url+f\"&offset={offset+1}\"\n",
     "        url_info = requests.get(url)\n",
